tests/snapshots/run_wpt_conformance__litert_gru_float32_tensors_steps_2_with_options_bias__options_recurrentBias__options_direction__backward___options_activations___relu____relu___and_options_returnSequence_true.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gru.https.any.js gru float32 tensors steps=2 with options.bias, options.recurrentBias, options.direction='backward', options.activations=['relu', 'relu'] and options.returnSequence=true, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: Gru { input: 1, weight: 4, recurrence: 3, steps: 2, hidden_size: 4, options: Some(MLGruOptions { label: "", bias: Some(0), recurrent_bias: Some(2), initial_hidden_state: None, reset_after: false, return_sequence: true, direction: "backward", layout: "", activations: Some(["relu", "relu"]) }), outputs: [5, 6] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    gruBias: f32[1, 12];
    gruInput: f32[2, 3, 2];
    gruRecurrentBias: f32[1, 12];
    gruRecurrentWeight: f32[1, 12, 4];
    gruWeight: f32[1, 12, 2];
  }

  nodes {
    [gruOutput1, gruOutput2] = gru(gruInput, gruWeight, gruRecurrentWeight, activations=["relu", "relu"], bias=0, direction="backward", initialHiddenState=null, label="", layout="", recurrentBias=2, resetAfter=false, returnSequence=true);
  }

  outputs { gruOutput1; gruOutput2; }
}
